--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Clustering_docs.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Clustering_docs.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "En esta lección revisamos los métodos más modernos para el descubrimiento de tópicos y clasificación de documentos. Usaremos algunos modelos globales preentrados que se encuentran disponibles libremente.\n",
     "\n",
-    "Más específicamente, cubriremos los modelos **Word2Vec**, **Glove** y **FasText** y usaremos las herramientas `nltk`, `gensim` y `spacy`.\n",
+    "Más específicamente, cubriremos los modelos **Word2Vec**, **Glove** y **FastText** y usaremos las herramientas `nltk`, `gensim` y `spacy`.\n",
     "\n",
     "En esta lección no usaremos TensorFlow."
    ]
@@ -128,7 +128,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/cbow_1_palabra.png\" width=\"450\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/cbow_1_palabra.png\" width=\"450\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura del modelo CBOW con una palabra de contexto</p>\n",
@@ -152,7 +152,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/CBOW.png\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/CBOW.png\" width=\"300\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura general del modelo CBOW</p>\n",
@@ -222,7 +222,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/SKIP_gram.png\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/SKIP_gram.png\" width=\"300\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo Skip-gram</p>\n",
@@ -240,7 +240,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Skip-Gram-architecture.jpg\" width=\"500\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Skip-Gram-architecture.jpg\" width=\"500\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura Skip-gram</p>\n",
@@ -324,7 +324,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/word2vec-models.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/word2vec-models.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura word2vec</p>\n",
@@ -765,14 +765,14 @@
    "source": [
     "Traducción:\n",
     "\n",
-    "{'dios': ['señor', 'mundano', 'jurado', 'nosotros', 'prometido'],\n",
-    "  'jesús': ['pedro', 'mesías', 'apóstoles', 'inmediatamente', 'iscariote'],\n",
-    "  'noé': ['shem', 'ham', 'jafet', 'kenan', 'henoch'],\n",
-    "  'egipto': ['egipcios', 'faraón', 'esclavitud', 'flujo', 'piojos'],\n",
-    "  'juan': ['bautista', 'santiago', 'divino', 'pedro', 'galilea'],\n",
-    "  'evangelio': ['cristo', 'arrepentimiento', 'predicar', 'fe', 'piadoso'],\n",
-    "  'moisés': ['congregación', 'niños', 'aarón', 'ordenanza', 'joshua'],\n",
-    "  'hambruna': ['pestilencia', 'peligro', 'moho', 'explosión', 'nocivo']}"
+    "{'dios': ['señor', 'mundano', 'piadoso', 'nosotros', 'gloria'],\n",
+    "  'jesús': ['mesías', 'pedro', 'apeles', 'apóstoles', 'natanael'],\n",
+    "  'noé': ['shem', 'jafet', 'ham', 'enosh', 'kenan'],\n",
+    "  'egipto': ['egipcios', 'faraón', 'esclavitud', 'vara', 'piojos'],\n",
+    "  'juan': ['bautista', 'santiago', 'pedro', 'galilea', 'tetrarca'],\n",
+    "  'evangelio': ['cristo', 'fe', 'esperanza', 'piadoso', 'predicación'],\n",
+    "  'moisés': ['congregación', 'niños', 'aarón', 'sinaí', 'joshua'],\n",
+    "  'hambruna': ['pestilencia', 'peligro', 'explosión', 'moho', 'alcanza']}"
    ]
   },
   {
@@ -1538,7 +1538,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/glove_matrix.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/glove_matrix.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Base matemática  del modelo Glove</p>\n",
