--- a/Herramientas_Desarrollo/Cuadernos/InstalacionR.ipynb
+++ b/Herramientas_Desarrollo/Cuadernos/InstalacionR.ipynb
@@ -4,17 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Instalación de R y R Studio\n",
-    "**Universidad Central**\n",
-    "\n",
-    "*Carlos Isaac Zainea, Daniel Montenegro y Luis Campos*"
+    "# <span style=\"color:#F72585\"><center>Instalación de R y R Studio</center></span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "R es un entorno y lenguaje de programación con un enfoque estadístico. En este momento es uno de los lenguajes de programación más utilizados en investigación científica y en campos emergentes relacionados con el análisis matemático y estadistico. Hace parte del sistema GNU y se distribuye bajo la licencia GNU GPL. Está disponible para los sistemas operativos Windows, Macintosh, Unix y GNU/Linux."
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Herramientas_Desarrollo/Imagenes/R_logo.svg.png\" width=\"500\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:R_logo.svg\">Hadley Wickham and others at RStudio</a>, <a href=\"https://creativecommons.org/licenses/by-sa/4.0\">CC BY-SA 4.0</a>, via Wikimedia Commons\n",
+    "\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R es un entorno y lenguaje de programación con un enfoque estadístico. En este momento es uno de los lenguajes de programación más utilizados en investigación científica y en campos emergentes relacionados con el análisis matemático y estadístico. Hace parte del sistema GNU y se distribuye bajo la licencia GNU GPL. Está disponible para los sistemas operativos Windows, Macintosh, Unix y GNU/Linux."
    ]
   },
   {
