--- a/Machine_Learning/Cuadernos/ACP.ipynb
+++ b/Machine_Learning/Cuadernos/ACP.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Análisis en componentes principales</span>\n"
+    "# <span style=\"color:#F72585\"><center>Análisis en componentes principales</center></span>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/Caf%C3%A9.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Coffeehouse,_coffee_shop,_or_caf%C3%A9,_IRAN,_Mashhad_14.jpg\">Mostafameraji</a>, <a href=\"https://creativecommons.org/licenses/by/4.0\">CC BY 4.0</a>, via Wikimedia Commons\n",
+    "\n",
+    "</center>\n"
    ]
   },
   {
@@ -855,7 +871,7 @@
    },
    "source": [
     "<center>\n",
-    "<img src=\"https://github.com/cepardot/DiplomadoIAyAP20211/blob/main/uProyeccion.png?raw=TRUE\" alt=\"Proyección sobre u\" width=\"300\" height=\"400\">\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/uProyeccion.png\" alt=\"Proyección sobre u\" width=\"500\" height=\"400\">\n",
     "<center>"
    ]
   },
@@ -1551,7 +1567,7 @@
    },
    "source": [
     "<center>\n",
-    "<img src=\"https://github.com/cepardot/DiplomadoIAyAP20211/blob/main/EDMvariables.png?raw=TRUE\" alt=\"Significado de la media y el centrado de una variable\" width=\"400\" height=\"500\">\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/EDMvariables.png\" alt=\"Significado de la media y el centrado de una variable\" width=\"400\" height=\"400\">\n",
     "<center>"
    ]
   },
@@ -1615,7 +1631,7 @@
     "El procedimento para encontrar los nuevos ejes es el mismo que en el de los individuos.\n",
     "\n",
     "<center>\n",
-    "<img src=\"https://github.com/cepardot/DiplomadoIAyAP20211/blob/main/EDMvariablesprimerEjeColor.png?raw=TRUE\" alt=\"Búsqueda de los nuevos ejes en el espacio de las variables\" width=\"300\" height=\"400\">\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/EDMvariablesprimerEjeColor.png\" alt=\"Búsqueda de los nuevos ejes en el espacio de las variables\" width=\"400\" height=\"400\">\n",
     "<center>\n",
     "\n",
     "Solución con vectores propios $\\frac{1}{n}\\mathbf{I}_n$ unitarios asociados a los $\\mu$ valores propios de la matriz:\n",
