--- a/Machine_Learning/Cuadernos/ACS.ipynb
+++ b/Machine_Learning/Cuadernos/ACS.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Análisis de correspondencias simples</span>\n"
+    "# <span style=\"color:#F72585\"><center>Análisis de correspondencias simples</center></span>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/unal.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:National_University_of_Colombia,_School_of_Engineering.jpg\">Rubashkyn</a>, Public domain, via Wikimedia Commons\n",
+    "\n",
+    "</center>\n"
    ]
   },
   {
@@ -831,7 +847,7 @@
    },
    "source": [
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Machine_Learning/Imagenes/metodosFactoriales.png\" alt=\"Primera imagen\" width=\"800\" height=\"600\">\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/metodosFactoriales.png\" alt=\"Primera imagen\" width=\"800\" height=\"600\">\n",
     "<center>"
    ]
   },
