--- a/Machine_Learning/Cuadernos/Agrupamiento.ipynb
+++ b/Machine_Learning/Cuadernos/Agrupamiento.ipynb
@@ -6,7 +6,23 @@
     "id": "OOJ7NOMnelA2"
    },
    "source": [
-    "# <span style=\"color:#F72585\">Algunos métodos de clasificación no supervisada (agrupamiento)</span>\n"
+    "# <span style=\"color:#F72585\"><center>Algunos métodos de clasificación no supervisada (agrupamiento)</center></span>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/groups.png\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Europe_(1896),_Germanic_ethnic_groups.png\">Europe_(1896),_ethnic_groups.jpg: The Times Atlasderivative work: Hayden120</a>, Public domain, via Wikimedia Commons\n",
+    "\n",
+    "</center>\n"
    ]
   },
   {
@@ -1533,7 +1549,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Machine_Learning/Imagenes/WardColor.png\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Machine_Learning/Imagenes/WardColor.png\" width=\"600\" height=\"400\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n"
@@ -2048,7 +2064,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Machine_Learning/Imagenes/estrategiaFactoClass.png\" width=\"800\" height=\"600\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/Alejandria/Libro-Fundamentos/main/Machine_Learning/Imagenes/estrategiaFactoClass.png\" width=\"800\" height=\"600\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n"
