--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_FastText_Intro.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_FastText_Intro.ipynb
@@ -20,6 +20,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6764d3ff-dc65-4d1e-96c1-939ec855ca72",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/fast_highway.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "</center>\n",
+    "</figure>\n",
+    "\n",
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/fotografia-de-lapso-de-tiempo-de-carretera-de-asfalto-durante-la-noche-2955704/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b1dcae15-217e-4bbf-903a-12abb9c032c9",
    "metadata": {},
    "source": [
@@ -582,7 +596,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/cbo_vs_skipgram.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/cbo_vs_skipgram.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
