--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_FastText_Intro.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_FastText_Intro.ipynb
@@ -1336,7 +1336,7 @@
     "tags": []
    },
    "source": [
-    "### Preprocesamiento"
+    "### <span style=\"color:#4CC9F0\">Preprocesamiento</span>"
    ]
   },
   {
