--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Shakespeare-Original.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Shakespeare-Original.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##   <span style=\"color:#4361EE\">Introducción</span>"
+    "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##   <span style=\"color:blue\">Librerías</span>\n"
+    "## <span style=\"color:#4361EE\">Librerías</span>\n"
    ]
   },
   {
@@ -989,6 +989,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "¿Quién eres tú, tan cruel? que te sostengo de forma di di di di di que eres más querido ciego 'parece en ti en su maldad mandíbulas de tigre apesta conjunto 'tis hombres sujetos indigestos desfigurados pero algunas barras en el más dulce desgastado sway'st ensayo visto nada dulzura esconderse tanto tiempo lejos pero las palabras parecen buenas ladrón incluso tan bueno desesperación mi sombra cerca de la barra de purga nacido nuevo nuevo mudo muerto sido visto fallecimiento sustancial loco hojas estimado estimado estimado libre visto crecer hombres junio discapacitado creció la mancha del amor todavía en ellos como su enfermedad debe llamarme tener no dos, algunos días sucios terminan la dulzura, comparten 'tis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##   <span style=\"color:#4361EE\">Referencias</span>"
    ]
   },
@@ -1022,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
