--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_01_mecanismos_atencion.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_01_mecanismos_atencion.ipynb
@@ -2,19 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<figure>\n",
-    "<img src=\"../Imagenes/logo-final-ap.png\"  width=\"80\" height=\"80\" align=\"left\"/> \n",
-    "</figure>\n",
-    "\n",
-    "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# <span style=\"color:#F72585\"><center>Introducción a los mecanismos de atención</center></span>"
@@ -28,7 +15,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Dorsal_and_ventral_attention_systems.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Dorsal_and_ventral_attention_systems.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -114,7 +101,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/bio_atencion.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/bio_atencion.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<center> <caption>Señal no volitiva</caption> </center>\n",
     "</figure>\n",
@@ -164,7 +151,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/cafeinado.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/cafeinado.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<center> <caption>Señal volitiva</caption> </center>\n",
     "</figure>\n",
@@ -214,7 +201,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/qkv.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/qkv.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<center> <caption>Esquema clave, consulta, valor</caption> </center>\n",
     "</figure>\n",
@@ -549,7 +536,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/attention-output.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/attention-output.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<center> <caption>Cálculo de la salida de un  modelo de atención agrupada</caption> </center>\n",
     "</figure>\n",
@@ -688,7 +675,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/multi-head-attention.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/multi-head-attention.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
