--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_02_atencion_pln.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/pln_sesion_04_02_atencion_pln.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Brain_model.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Brain_model.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -46,7 +46,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/seq2seq_0.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/seq2seq_0.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo clásico seq2seq.</p>\n",
@@ -88,7 +88,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/seq2seq.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/seq2seq.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Estructura autoencoder de un modelo seq2seq de *pregunta/respuesta*.</p>\n",
@@ -119,7 +119,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/mecansimo_atencion.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/mecansimo_atencion.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo conceptual de atención.</p>\n",
@@ -186,7 +186,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Paso_0_Atencion.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Paso_0_Atencion.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo de atención. Paso 0. preparación de los estados ocultos</p>\n",
@@ -220,7 +220,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Paso_1_Atencion.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Paso_1_Atencion.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Model de atención. Paso 1. Puntajes para cada estado oculto del encoder</p>\n",
@@ -250,7 +250,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Paso_2_Atencion.gif\" width=\"700\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Paso_2_Atencion.gif\" width=\"700\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo de atención. Paso 2. Los puntajes para cada estado oculto del encoder se transforman a la escala softmax</p>\n",
@@ -284,7 +284,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Paso_3_Atencion.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Paso_3_Atencion.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo de atención. Paso 3. Vectores de alineación (softmax)</p>\n",
@@ -396,7 +396,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Paso_4_Atencion.gif\" width=\"700\" height=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Paso_4_Atencion.gif\" width=\"700\" height=\"700\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo de atención. Paso 4. vector de contexto</p>\n",
@@ -426,7 +426,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Paso_5_Atencion.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Paso_5_Atencion.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo de atención. Paso 5. Alimenta el decodificador con el vector de contexto</p>\n",
@@ -449,7 +449,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Atencion_Ilustrado_1.png\" width=\"700\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Atencion_Ilustrado_1.png\" width=\"700\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Capa de atención completa</p>\n",
@@ -513,7 +513,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/NMT_Bahdanau.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/NMT_Bahdanau.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">NMT. Bahdanau et al. Encoder: BiGRU; Decoder: GRU</p>\n",
@@ -555,7 +555,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/NMT_Luong.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/NMT_Luong.png\" width=\"700\" height=\"700\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">NMT. Luong et al. Encoder: Doble capa LSTM; Decoder: Doble capa LSTM</p>\n",
@@ -590,7 +590,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/NMT_Google.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/NMT_Google.png\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">NMT. Google. Las conexiones de salto se indican mediante flechas curvas. Tenga en cuenta que las celdas LSTM solo muestran el estado oculto y la entrada; no muestra la entrada del estado de la celda.</p>\n",
