--- a/Redes_Neuronales/Cuadernos/am-subclassing-iris.ipynb
+++ b/Redes_Neuronales/Cuadernos/am-subclassing-iris.ipynb
@@ -295,7 +295,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## <span style=\"color:#4361EE\">Compila</span>\n"
    ]
@@ -581,7 +583,7 @@
     }
    ],
    "source": [
-    "print(\"Our accuracy is {}%\".format(((cm[0][0] + cm[1][1]+ cm[2][2])/y_test_species.shape[0])*100))"
+    "print(\"Nuestra exactitud es {}%\".format(((cm[0][0] + cm[1][1]+ cm[2][2])/y_test_species.shape[0])*100))"
    ]
   },
   {
@@ -608,7 +610,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('work')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -622,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
