--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/Consola_MongoDB/consola_mongodb1.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/Consola_MongoDB/consola_mongodb1.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -130,7 +130,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/Consola_MongoDB/consola_mongodb2.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/Consola_MongoDB/consola_mongodb2.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -157,7 +157,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/Consola_MongoDB/consola_mongodb3.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/Consola_MongoDB/consola_mongodb3.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -1720,7 +1720,6 @@
    "cell_type": "markdown",
    "id": "0b273b6a-a087-4259-bfd8-0c2ad7a2b1f9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1853,7 +1852,6 @@
    "cell_type": "markdown",
    "id": "c6f4d7ed-c69c-4165-91a1-f44a6a92b3f8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1894,7 +1892,6 @@
    "cell_type": "markdown",
    "id": "bf6f60c4-4bcd-4b97-98da-f54fc0760073",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1950,7 +1947,6 @@
    "cell_type": "markdown",
    "id": "15ad2d55-5513-46ed-bd8c-3fc34f464841",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1982,7 +1978,6 @@
    "cell_type": "markdown",
    "id": "72c2b98d-e7cf-42c0-83e5-d9542f841b44",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2014,7 +2009,6 @@
    "cell_type": "markdown",
    "id": "c9081c12-4e4d-45a0-b98c-a373b295c452",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2056,7 +2050,6 @@
    "cell_type": "markdown",
    "id": "75bbf122-c0a1-4827-b9ef-18c9453e8598",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2087,7 +2080,6 @@
    "cell_type": "markdown",
    "id": "b3ea520c-c7d8-4ec5-bced-f7fe9d056856",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2147,7 +2139,6 @@
    "cell_type": "markdown",
    "id": "3a09e076-0db9-4c4f-9be1-cb6a02bc771b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2260,7 +2251,6 @@
    "cell_type": "markdown",
    "id": "ded893a4-70c2-4b0d-997c-8da1963c600a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2337,7 +2327,6 @@
    "cell_type": "markdown",
    "id": "071c8670-c717-4810-9e8c-9fea51fc6ffb",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2402,7 +2391,6 @@
    "cell_type": "markdown",
    "id": "ea5aef3e-7b69-4269-8945-207485955428",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2469,7 +2457,6 @@
    "cell_type": "markdown",
    "id": "422dc736-1c39-4ccd-8891-014f7ea7b742",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2507,7 +2494,6 @@
    "cell_type": "markdown",
    "id": "b449bbb5-6f17-4e72-be98-eeea6a599c8d",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2623,7 +2609,6 @@
    "cell_type": "markdown",
    "id": "1b00c886-60b0-4db9-9638-e2fbc6360b3b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
