--- a/Bases_de_datos/Cuadernos/instalacion_mongo_windows.ipynb
+++ b/Bases_de_datos/Cuadernos/instalacion_mongo_windows.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb0.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb0.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -98,7 +98,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb1.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb1.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -118,7 +118,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb2.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb2.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -138,7 +138,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb3.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb3.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -158,7 +158,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb4.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb4.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -178,7 +178,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb5.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb5.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -198,7 +198,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb6.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb6.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -218,7 +218,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb7.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb7.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -238,7 +238,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb8.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb8.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -307,7 +307,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb9.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb9.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -330,7 +330,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb10.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb10.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -350,7 +350,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb11.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb11.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -370,7 +370,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb12.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb12.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -390,7 +390,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb13.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb13.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -410,7 +410,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb14.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb14.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -456,7 +456,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb15.jpg\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb15.jpg\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -476,7 +476,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb16.jpg\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb16.jpg\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -496,7 +496,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb17.jpg\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb17.jpg\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -516,7 +516,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb18.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb18.jpg\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -536,7 +536,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb19.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb19.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -556,7 +556,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb20.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb20.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -576,7 +576,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb21.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb21.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -628,7 +628,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb22.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb22.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -650,7 +650,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb23.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb23.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -672,7 +672,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb24.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb24.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -694,7 +694,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"Imagenes/instalacion_mongodb25.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"../Imagenes/instalacion_mongodb25.jpg\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>"
    ]
@@ -716,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
