--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -67,7 +67,7 @@
    "id": "a5f0abd1-36b6-4b8a-b186-ce5b6cad51be",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```shell\n",
     "Input:\n",
     "\n",
     "> mongod\n",
@@ -188,7 +188,7 @@
    "id": "428850a0-83d4-447e-a949-fea72008108c",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```shell\n",
     "Input:\n",
     "\n",
     "> mongosh \"mongodb+srv://cluster0.fjusaec.mongodb.net/myFirstDatabase\" --apiVersion 1 --username kamilo44\n",
@@ -238,7 +238,7 @@
    "id": "3a45587c-9aed-4b9e-abf3-281336599c4b",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```shell\n",
     "mongoimport --db <base de datos> --collection <colección> --legacy <ruta del archivo .json>\n",
     "```"
    ]
@@ -2874,7 +2874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
