--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -67,7 +67,7 @@
    "id": "a5f0abd1-36b6-4b8a-b186-ce5b6cad51be",
    "metadata": {},
    "source": [
-    "```shell\n",
+    "```yaml\n",
     "Input:\n",
     "\n",
     "> mongod\n",
