--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -188,7 +188,7 @@
    "id": "428850a0-83d4-447e-a949-fea72008108c",
    "metadata": {},
    "source": [
-    "```shell\n",
+    "```yaml\n",
     "Input:\n",
     "\n",
     "> mongosh \"mongodb+srv://cluster0.fjusaec.mongodb.net/myFirstDatabase\" --apiVersion 1 --username kamilo44\n",
