--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -67,7 +67,7 @@
    "id": "a5f0abd1-36b6-4b8a-b186-ce5b6cad51be",
    "metadata": {},
    "source": [
-    "```yaml\n",
+    "```bash\n",
     "Input:\n",
     "\n",
     "> mongod\n",
@@ -188,7 +188,7 @@
    "id": "428850a0-83d4-447e-a949-fea72008108c",
    "metadata": {},
    "source": [
-    "```yaml\n",
+    "```bash\n",
     "Input:\n",
     "\n",
     "> mongosh \"mongodb+srv://cluster0.fjusaec.mongodb.net/myFirstDatabase\" --apiVersion 1 --username kamilo44\n",
