--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -10,14 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7aa3ff-2701-4e23-aa2a-1102e2d71bfa",
-   "metadata": {},
-   "source": [
-    "- Poner como ejemplo los registros de las preguntas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fc147fcc-2fa9-4f6e-8818-f0b9611fc97f",
    "metadata": {},
    "source": [
@@ -2948,7 +2940,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pendinte."
+    "# Pendinte.\n",
+    "# Poner como ejemplo los registros de las preguntas"
    ]
   },
   {
@@ -2963,12 +2956,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e1c2744d-d379-4ae7-b9f2-fb4794c66dfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pendinte."
+    "# Pendinte.\n",
+    "# Poner como ejemplo los registros de las preguntas"
    ]
   },
   {
@@ -2988,7 +2982,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pendinte."
+    "# Pendinte.\n",
+    "# Poner como ejemplo los registros de las preguntas"
    ]
   },
   {
@@ -3016,7 +3011,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pendinte."
+    "# Pendinte.\n",
+    "# Poner como ejemplo los registros de las preguntas"
    ]
   },
   {
